--- a/app/src/main/res/layout/fragment_meal_planner.xml
+++ b/app/src/main/res/layout/fragment_meal_planner.xml
@@ -1,17 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.FragmentMealPlanner">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Tab 2"
-        android:textSize="40dp"
-        android:gravity="center"
-        android:textColor="@color/black"/>
+   <RelativeLayout
+       android:id="@+id/rel_header"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:background="@color/purple_500"
+       android:padding="16dp">
 
-</FrameLayout>
+      <ImageView
+          android:id="@+id/img_arrow_left"
+          android:layout_width="45dp"
+          android:layout_height="45dp"
+          android:layout_alignParentStart="true"
+          android:src="@drawable/baseline_keyboard_arrow_left_black_24dp"
+          android:background="?attr/selectableItemBackgroundBorderless"
+          android:clickable="true"
+          android:focusable="true" />
+
+      <TextView
+          android:id="@+id/tv_date"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_centerInParent="true"
+          android:layout_centerHorizontal="true"
+          android:textColor="@color/white"
+          android:textSize="20sp"/>
+
+      <ImageView
+          android:id="@+id/img_arrow_right"
+          android:layout_width="45dp"
+          android:layout_height="45dp"
+          android:layout_alignParentEnd="true"
+          android:src="@drawable/baseline_keyboard_arrow_right_white_24dp"
+          android:background="?attr/selectableItemBackgroundBorderless"
+          android:clickable="true"
+          android:focusable="true" />
+
+
+
+
+   </RelativeLayout>
+
+   <androidx.recyclerview.widget.RecyclerView
+       android:id="@+id/recycler_meal_planner"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:layout_below="@+id/rel_header" />
+
+</RelativeLayout>
