--- a/app/src/main/res/layout/recipe_item.xml
+++ b/app/src/main/res/layout/recipe_item.xml
@@ -7,29 +7,6 @@
     android:orientation="vertical">
 
 
-    <androidx.appcompat.widget.Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize">
-
-        <RelativeLayout
-            android:gravity="center_vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <Spinner
-                android:id="@+id/spinner_tags"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignParentEnd="true"
-                android:entries="@array/tags"
-                android:gravity="center" />
-
-
-        </RelativeLayout>
-
-
-    </androidx.appcompat.widget.Toolbar>
-
     <!-- A CardView that contains a TextView -->
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
@@ -57,7 +34,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/image_View"
-
                 android:orientation="vertical">
 
                 <TextView
@@ -77,6 +53,15 @@
                     android:layout_marginBottom="6dp"
                     tools:text="Android Version"
                     android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+                <Button
+                    android:id="@+id/btn_add"
+                    android:layout_width="match_parent"
+                    android:text="@string/add"
+                    android:background="@color/purple_500"
+                    android:layout_height="40dp"/>
+
+
 
             </LinearLayout>
         </RelativeLayout>
