--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -4,8 +4,8 @@
 
     <item android:id="@+id/translate_menu"
           app:showAsAction="always"
-          android:icon="@drawable/baseline_group_work_black_24dp"
-          android:title="options"
+          android:icon="@drawable/baseline_language_white_24dp"
+          android:title="language"
         />
 
 
