--- a/app/src/main/res/layout/fragment_meal_planner.xml
+++ b/app/src/main/res/layout/fragment_meal_planner.xml
@@ -17,10 +17,10 @@
           android:layout_width="30dp"
           android:layout_height="30dp"
           android:layout_alignParentStart="true"
-          android:src="@drawable/baseline_keyboard_arrow_left_black_24dp"
           android:background="?attr/selectableItemBackgroundBorderless"
           android:clickable="true"
-          android:focusable="true" />
+          android:focusable="true"
+          android:src="@drawable/baseline_keyboard_arrow_left_black_24dp" />
 
       <TextView
           android:id="@+id/tv_date"
@@ -35,10 +35,10 @@
           android:layout_width="30dp"
           android:layout_height="30dp"
           android:layout_alignParentEnd="true"
-          android:src="@drawable/baseline_keyboard_arrow_right_white_24dp"
           android:background="?attr/selectableItemBackgroundBorderless"
           android:clickable="true"
-          android:focusable="true" />
+          android:focusable="true"
+          android:src="@drawable/baseline_keyboard_arrow_right_white_24dp" />
 
 
    </RelativeLayout>
@@ -48,5 +48,34 @@
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rel_header" />
+
+   <RelativeLayout
+      android:id="@+id/rel_no_meals"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:layout_below="@+id/rel_header">
+
+      <ImageView
+          android:id="@+id/icon"
+          android:layout_width="100dp"
+          android:layout_height="100dp"
+          android:layout_centerInParent="true"
+          android:src="@drawable/baseline_no_meals_black_24dp" />
+
+      <TextView
+          android:id="@+id/tv_no_meals"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_below="@+id/icon"
+          android:layout_centerInParent="true"
+          android:gravity="center"
+          android:text="@string/no_meals"
+          android:textColor="@color/black"
+          android:textSize="25sp" />
+
+
+
+
+   </RelativeLayout>
 
 </RelativeLayout>
